Add Cast Transformers
Replace Condition Cast Transformer with Filter Cast Transformer that utilizes Loot Context Predicates to generalize its functionality.
Update version number